--- a/MadWolfTwitchBot.Client/View/Modals/ChannelDetailsWindow.xaml
+++ b/MadWolfTwitchBot.Client/View/Modals/ChannelDetailsWindow.xaml
@@ -1,38 +1,34 @@
-﻿<Window x:Class="MadWolfTwitchBot.Client.View.Modals.BotDetailsWindow"
+﻿<Window x:Class="MadWolfTwitchBot.Client.View.Modals.ChannelDetailsWindow"
         x:Name="ActiveWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MadWolfTwitchBot.Client.ViewModel"
-        xmlns:usercontrols="clr-namespace:MadWolfTwitchBot.Client.UserControls"
         xmlns:input="clr-namespace:Microsoft.Toolkit.Mvvm.Wpf.Input"
         mc:Ignorable="d"
-        Title="BotDetailsWindow" 
+        Title="ChannelDetailsWindow" 
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         ShowInTaskbar="False">
-    
+
     <Window.DataContext>
-        <local:BotDetailsViewModel />
+        <local:ChannelDetailsViewModel />
     </Window.DataContext>
 
     <Window.Resources>
-        <local:BoolToVisibilityConverter x:Key="VisibilityConverter" />
+        <local:StringToVisibilityConverter x:Key="VisibilityConverter" />
     </Window.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="145" />
             <ColumnDefinition Width="250" />
-
             <ColumnDefinition Width="125" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
 
@@ -40,25 +36,15 @@
         </Grid.RowDefinitions>
 
         <Label HorizontalContentAlignment="Right">Username:</Label>
-        <TextBox Grid.Column="1" Text="{Binding Username}" IsEnabled="{Binding IsNew}" />
-        <Button Grid.Column="2" Content="Validate" Command="{Binding VerifyUserCommand}" Visibility="{Binding IsEditMode, Converter={StaticResource VisibilityConverter}}"
-                input:RelayCommandExtensions.IsCommandUpdateEnabled="True" />
+        <TextBox Grid.Column="1" Text="{Binding Username}" IsEnabled="False" />
 
         <Label Grid.Row="1" HorizontalContentAlignment="Right">Display Name:</Label>
         <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding DisplayName}" />
-
-        <Label Grid.Row="2" HorizontalContentAlignment="Right">OAuth Token:</Label>
-        <usercontrols:OAuthTokenBox Grid.Row="2" Grid.Column="1" OAuthToken="{Binding OAuthToken}" IsEnabled="False" />
-        <Button Grid.Row="2" Grid.Column="2" Content="Generate Token" Command="{Binding TokenCommand}"
+        <Button Grid.Row="1" Grid.Column="2" Content="Use Twitch" Command="{Binding GenerateDisplayNameCommand}" Visibility="{Binding AuthToken, Converter={StaticResource VisibilityConverter}}"
                 input:RelayCommandExtensions.IsCommandUpdateEnabled="True" />
 
-        <Label Grid.Row="3" HorizontalContentAlignment="Right">Token Last Verified (UTC):</Label>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding TokenTimestamp, StringFormat='dd/MM/yyyy HH:mm:ss'}" IsEnabled="False" />
-        <Button Grid.Row="3" Grid.Column="2" Content="Validate" Command="{Binding VerifyTokenCommand}"
-                input:RelayCommandExtensions.IsCommandUpdateEnabled="True" />
-
-        <Button Grid.Row="4" Width="125" HorizontalAlignment="Left" Content="Delete" Visibility="{Binding IsNew, Converter={StaticResource VisibilityConverter}}" />
-        <StackPanel Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <Button Grid.Row="2" Width="125" HorizontalAlignment="Left" Content="Delete" />
+        <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="125" IsDefault="True" Content="Save" Command="{Binding ConfirmCommand}" CommandParameter="{Binding ElementName=ActiveWindow}"
                     input:RelayCommandExtensions.IsCommandUpdateEnabled="True" />
             <Button Width="125" IsCancel="True" Content="Cancel" />
