--- a/MadWolfTwitchBot.Client/View/BotPromoWindow.xaml
+++ b/MadWolfTwitchBot.Client/View/BotPromoWindow.xaml
@@ -9,8 +9,7 @@
         Title="BotPromoWindow"
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize"
-        ShowInTaskbar="False">
+        ResizeMode="NoResize">
 
     <Window.DataContext>
         <local:BotPromoViewModel />
@@ -29,20 +28,49 @@
 
         <DataGrid Grid.ColumnSpan="2"
                   AutoGenerateColumns="False"
-                  IsReadOnly="False"
+                  IsReadOnly="True"
+                  CanUserSortColumns="False"
                   Width="650"
                   Height="150"
                   ItemsSource="{Binding BotPromoMessages}">
-            <DataGridTemplateColumn>
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <Button Content="..."
-                                Command="{Binding DataContext.EditCommandCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" 
-                                CommandParameter="{Binding}"
+            <DataGrid.Columns>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="..."
+                                Command="{Binding DataContext.EditCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" 
+                                CommandParameter="{Binding Data}"
                                 input:RelayCommandExtensions.IsCommandUpdateEnabled="True" />
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTextColumn Width="*" Header="Message" Binding="{Binding Data.ResponseMessage}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+            </DataGrid.Columns>
         </DataGrid>
+
+        <Button Grid.Row="1" Width="125" Content="Clear Selection"
+                input:RelayCommandExtensions.IsCommandUpdateEnabled="True" />
+
+        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Width="125" Content="Add" Command="{Binding AddCommand}"
+                    input:RelayCommandExtensions.IsCommandUpdateEnabled="True"/>
+            <Button Width="125" Content="Remove" Command="{Binding DeleteCommand}"
+                    input:RelayCommandExtensions.IsCommandUpdateEnabled="True" />
+        </StackPanel>
     </Grid>
 </Window>
